@@ -1,3 +1,0 @@
-console.log("Hanging forever...");
-script.timeout(0);
-for(;;);
